--- a/config.json
+++ b/config.json
@@ -29,7 +29,7 @@
   {
     "APPLICATION"  : "capture",
     "APPLICATION_MAIN_CLASS" : "${APPLICATION}.demo.Demo",
-    "QOOXDOO_PATH" : "../../qooxdoo",
+    "QOOXDOO_PATH" : "../qooxdoo",
     //"QXTHEME"      : "capture.theme.modern.Theme",
     "QXTHEME"      : "qx.theme.Modern",
     "API_EXCLUDE"  : ["qx.test.*", "capture.demo.*", "${APPLICATION}.theme.*", "${APPLICATION}.test.*"],
