--- a/Manifest.json
+++ b/Manifest.json
@@ -3,12 +3,12 @@
   {
     "name" : "capture",
 
-    "summary" : "Capture Contribution",
-    "description" : "This is a skeleton for a qooxdoo contribution.",
+    "summary" : "Camera Capture",
+    "description" : "Widget that support HTML5 camera still image capture to local image.",
     
     "homepage" : "http://contrib.qooxdoo.org/project/capture",
 
-    "license" : "LGPL/EPL",
+    "license" : "MIT",
     "authors" : 
     [
       {
@@ -18,7 +18,7 @@
     ],
 
     "version" : "trunk",
-    "qooxdoo-versions": ["2.0"]
+    "qooxdoo-versions": ["2.0", "2.1", "5.0", "5.1", "6.0" ]
   },
   
   "provides" : 
